Fixed dependencies error

--- a/src/main/java/studio/ui/ServerForm.form
+++ b/src/main/java/studio/ui/ServerForm.form
@@ -45,16 +45,18 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jSplitPane1" max="32767" attributes="0"/>
+              <Component id="jSplitPane1" pref="335" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jServerRemoveButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jServerCloneButton" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="cancelButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="EditColorButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="testConnButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jServerRemoveButton" alignment="0" pref="23" max="32767" attributes="0"/>
+                      <Component id="jServerCloneButton" alignment="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
